plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'today.sesac'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
    springAiVersion = "1.0.0"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // Spring AI Vertex AI Gemini
    implementation platform("org.springframework.ai:spring-ai-bom:$springAiVersion")
    implementation 'org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    // gradle로 test를 실행할 때 .env 파일에 정의된 환경변수를 읽어와서 테스트 환경에 적용
    def envFile = file('.env')
    if (envFile.exists()) {
        envFile.eachLine { line ->
            if (line.trim() && !line.startsWith('#')) {
                def (key, value) = line.split('=', 2)
                if (key && value) {
                    // 환경 변수 설정
                    environment key, value.trim()
                }
            }
        }
    }
}